fix justify on safari and firefox

--- a/packages/editor/web/statics/styles/rich-content-editor.scss
+++ b/packages/editor/web/statics/styles/rich-content-editor.scss
@@ -99,7 +99,7 @@
 
 .justify {
   & > * {
-    white-space: pre-line !important;
+    white-space: break-spaces !important;
     text-align: justify !important;
   }
 }
