--- a/packages/viewer/web/statics/rich-content-viewer.scss
+++ b/packages/viewer/web/statics/rich-content-viewer.scss
@@ -117,11 +117,11 @@
 }
 
 .justify {
-  white-space: pre-wrap !important;
+  white-space: break-spaces !important;
   text-align: justify !important;
 
   & > * {
-    white-space: pre-wrap !important;
+    white-space: break-spaces !important;
     text-align: justify !important;
   }
 }
